# emacs-rime

./: .gitignore  CMakeLists.txt  Makefile  rime.el  test.el
src/: lib.c
